# bro_code

./: .env.example  README.md  pyproject.toml  requirements.txt  start.bat  start.sh
agent/: graph.py  tools.py
backend/: server.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AgentLog.jsx  FileModal.jsx  FileTree.jsx  PreviewPanel.jsx
generated_project/: index.html  style.css
